# wordle-solver

./: .gitignore  Cargo.toml  README.md  answer_indexes.json  game_state.json  guess.txt  words.txt
src/: cli.rs  main.rs  solver.rs  wasm.rs
www/: index.html  index.js  package-lock.json  package.json  solver.js  webpack.config.js  worker.js
