[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = {version="0.2.4", features=["js"]}
rand = "0.8.*"
serde = "1.0.*"
serde_json = "1.0.*"
js-sys = "0.3.56"
wasm-bindgen = "0.2.63"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"


[lib]
crate-type = ["cdylib", "rlib"]
name = "wordle_wasm"
path = "src/wasm.rs"

[[bin]]
name = "wordle"
path = "src/cli.rs"